# RemoteHDT-benchmark

./: .gitignore  Dockerfile  README.md  deploy zarr files http.txt  execute_benchmark.bat  execute_benchmark.sh  generate_RDF.bat  generate_RDF.sh  reset.bat  reset.sh  run_example.bat  run_example.sh  start_remote_server_simulation.sh  stop_remote_server_simulation.sh
bechmarks/: Cargo.toml
bechmarks/src/: main.rs
benchmarks/: .gitignore  Cargo.toml  README.md  execute_benchmark.bat  execute_benchmark.sh
benchmarks/src/: benchmark.rs  main.rs  utils.rs
generate/: Cargo.toml  Dockerfile  README.md  benchmark.nt  generate_RDF.bat  generate_RDF.sh  generate_output.sh
generate/src/: main.rs
remote-server-simulation/: Dockerfile  deploy zarr files http.txt  docker-compose.yml  enter_docker_console.sh  nginx.conf  procedure.txt  start.sh  stop.sh  test.json  zarr-http.py
remote-server-simulation/n50-p10-t10.zarr/group/RemoteHDT/: zarr.json
remote-server-simulation/n50-p10-t10.zarr/group/RemoteHDT/c/0/: 0
remote-server-simulation/n50-p10-t10.zarr/group/RemoteHDT/c/1/: 0
remote-server-simulation/n50-p10-t10.zarr/group/RemoteHDT/c/2/: 0
remote-server-simulation/n50-p10-t10.zarr/group/RemoteHDT/c/3/: 0
remote-server-simulation/n50-p10-t10.zarr/group/RemoteHDT/c/4/: 0
remote-server-simulation/n50-p10-t10.zarr/group/RemoteHDT/c/5/: 0
remote-server-simulation/n50-p10-t10.zarr/group/RemoteHDT/c/6/: 0
remote-server-simulation/n50-p10-t10.zarr/group/RemoteHDT/c/7/: 0
remote-server-simulation/n50-p10-t10.zarr/group/RemoteHDT/c/8/: 0
remote-server-simulation/n50-p10-t10.zarr/group/RemoteHDT/c/9/: 0
results/: benchmark.csv
zarr-files/: test1.nt
zarr-files/test1.zarr/group/RemoteHDT/: zarr.json
zarr-files/test1.zarr/group/RemoteHDT/c/0/: 0
zarr-files/test1.zarr/group/RemoteHDT/c/1/: 0
zarr-files/test1.zarr/group/RemoteHDT/c/10/: 0
zarr-files/test1.zarr/group/RemoteHDT/c/100/: 0
zarr-files/test1.zarr/group/RemoteHDT/c/101/: 0
zarr-files/test1.zarr/group/RemoteHDT/c/102/: 0
zarr-files/test1.zarr/group/RemoteHDT/c/103/: 0
zarr-files/test1.zarr/group/RemoteHDT/c/104/: 0
zarr-files/test1.zarr/group/RemoteHDT/c/105/: 0
zarr-files/test1.zarr/group/RemoteHDT/c/106/: 0
zarr-files/test1.zarr/group/RemoteHDT/c/107/: 0
zarr-files/test1.zarr/group/RemoteHDT/c/108/: 0
zarr-files/test1.zarr/group/RemoteHDT/c/109/: 0
zarr-files/test1.zarr/group/RemoteHDT/c/11/: 0
zarr-files/test1.zarr/group/RemoteHDT/c/110/: 0
zarr-files/test1.zarr/group/RemoteHDT/c/111/: 0
zarr-files/test1.zarr/group/RemoteHDT/c/112/: 0
zarr-files/test1.zarr/group/RemoteHDT/c/113/: 0
zarr-files/test1.zarr/group/RemoteHDT/c/114/: 0
zarr-files/test1.zarr/group/RemoteHDT/c/115/: 0
zarr-files/test1.zarr/group/RemoteHDT/c/116/: 0
zarr-files/test1.zarr/group/RemoteHDT/c/117/: 0
zarr-files/test1.zarr/group/RemoteHDT/c/118/: 0
zarr-files/test1.zarr/group/RemoteHDT/c/119/: 0
zarr-files/test1.zarr/group/RemoteHDT/c/12/: 0
(+973 files in other folders)
