[package]
authors = [ "Ángel Iglesias Préstamo <angel.iglesias.prestamo@gmail.com>", "Diego Martín Fernández <diegomartinfnz@gmail.com>" ]
name = "bechmarks"
version = "0.1.0"
edition = "2021"

[dependencies]
remote-hdt = {git = "https://github.com/weso/RemoteHDT", branch = "master"}
rand = "0.8.5"
clap = { version = "4.5.3", features = ["derive"] }