[package]
authors = [ "Ángel Iglesias Préstamo <angel.iglesias.prestamo@gmail.com>", "Diego Martín Fernández <diegomartinfnz@gmail.com>" ]
name = "generate"
version = "0.1.0"
edition = "2021"


[dependencies]
remote-hdt = {git = "https://github.com/weso/RemoteHDT"}
rand = "0.8"
random_name_generator = "0.3.6"
lazy_static = "1.4.0"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.5.0"

[profile.release]
codegen-units = 1
opt-level = 3
lto = "fat"
